# cpp-library-template

./: .gitignore  CMakeLists.txt  README.md
lib/dmitigr/: the_cpp_library.cpp  the_cpp_library.hpp
lib/dmitigr/the_cpp_library/: debug.hpp  dll.hpp  header_only.hpp  header_only_footer.hpp  header_only_header.hpp  implementation_header.hpp  the_class.cpp  the_class.hpp  tu.cpp  types_fwd.hpp
tests/: CMakeLists.txt  unit.hpp  unit1.cpp
